# android-jni-tracer

./: .gitignore  JSON_ANALYSIS_GUIDE.md  Makefile  PROJECT_SPECIFICATION.md  README.md  build-android.ps1
docs/: failure_recovery.md  final_feature_checklist.md  generic_invoke_plan_example.json.example  invoke_usage.md  llm_mcp_enhancement_plan.md  mcp_setup_guide.md  mcp_tool_descriptions.md  mcp_tool_descriptions_KO.md  mock_config.md
include/: jni.h
python/: README.md  pyproject.toml
python/jni_tracer/: __init__.py  cli.py  diff.py  log.py  mock.py  runner.py  store.py
python/jni_tracer/mcp/: __init__.py  execution.py  safety.py  server.py
src/: fake_jni.c  fake_jni.h  jni_logger.c  jni_logger.h  json_logger.c  json_logger.h  main.c  mock_config.c  mock_config.h
